syntax = "proto3";
package pb;
option go_package ="invafresh.com/department-service/pb";

message DepartmentDetail {
	int32 number    = 1;      
	string name   = 2;   
	optional string reference_code= 3; 
	string modify_user  = 4;
	string modify_date  = 5;
}

message DepartmentDetails{
    repeated DepartmentDetail Department =1;
}

message EmptyParams_Dep {}

service DepartmentService {
    rpc GetAll(EmptyParams_Dep) returns (DepartmentDetails) {}
}